fix layout problems with testimonials/ page

--- a/cscsite/assets/src/sass/center/pages/testimonials.scss
+++ b/cscsite/assets/src/sass/center/pages/testimonials.scss
@@ -86,6 +86,7 @@
 
     &.__list {
       .testimonial {
+        width: 100%;
         margin-bottom: 40px;
 
         &.right {
@@ -93,6 +94,7 @@
         }
 
         blockquote {
+          overflow: hidden;
           padding: 30px;
           &:before {
             display: none;
